--- a/webui/src/styles/page.scss
+++ b/webui/src/styles/page.scss
@@ -31,13 +31,7 @@
 
   .c-statusBar__playbackArea {
     grid-area: status;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    .c-statusBar__playerBox {
-      flex: 1;
-    }
+    padding: 0 35px;
   }
 
   .c-statusBar__playbackControls {
@@ -66,7 +60,7 @@
 
 @media only screen and (max-width: 600px) {
   .c-statusBar {
-    grid-template-columns: min-content 1fr min-content;
+    grid-template-columns: min-content minmax(100px, 1fr) min-content;
     grid-template-rows: min-content min-content;
     grid-template-areas: "menu status expand" "controlsAndSelector controlsAndSelector controlsAndSelector";
 
